# form-checker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  task_description.md
.github/workflows/: main.yml
db/: forms.json  init-mongo.js
form_checker/: __init__.py  app.py  db.py  form.py  validator.py
tests/: test_app.py
