[tool.poetry]
name = "form-checker"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"
packages = [{include = "form_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pymongo = "^4.3.3"
validators = "^0.20.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
